# EllipseDetection

./: .gitignore  CMakeCache.txt  CMakeLists.txt  EllipseDetection  EllipseDetection.cxx  EllipseDetection.hpp  Makefile  cmake_install.cmake
matlab/: .ellipseDetection.m.swo  ellipseDetection.m  matlab_demo.m
utils/: .preprocessing.cxx.swp  CMakeLists.txt  Makefile  cmake_install.cmake  fastpdist.cxx  fastpdist.hpp  findedgepoints.cxx  findedgepoints.hpp  preprocessing.cxx  preprocessing.hpp
